--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -35,7 +35,7 @@
                     <li><a href="https://www.instagram.com/eventmboa/"><i class="fa fa-instagram"></i> Instagram</a>
                     </li>
                     <li><a href="https://plus.google.com/u/0/108139670497252318920"><i class="fa fa-google-plus"></i>
-                        Gougle+</a></li>
+                        Google+</a></li>
                 </ul>
             </div>
         </div>
