--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -5,7 +5,7 @@
         <h1 class="sz" style="padding-left: 15px;font-weight: bold;" ng-bind-html="titre"></h1>
         <div class="row">
             <div class="col-lg-4 pull-right">
-                <input type="text" ng-model="searchKeys" required class="form-control" placeholder="Recherche d'événements"/>
+                <input type="text" ng-model="searchKey" required class="form-control" placeholder="{{'Recherche d\'événements ';''|translate}}"/>
             </div>
         </div>
         <div class="row no-padding card item"
@@ -23,7 +23,7 @@
             <div class="col-lg-9">
                 <div class="item-9" ui-sref="details({nom:e.name+'/'+e.id})">
                     <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
-                    <div class="titre">{{e.name}}</div>
+                    <div class="titre">{{e.old_id}}{{e.name}}</div>
                     <div class="lieu" style="position: absolute;bottom: 0;">{{e.adress.name}}, {{e.town.name}}</div>
                 </div>
                 <div class="card-action">
@@ -32,8 +32,8 @@
                         <a ui-sref="events({target:e.event_type.name,id:'type'})">#{{e.event_type.name}}</a>
                     </div>
                     <div class="action">
-                        <a href="#" class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
-                        <a href="#" class="pull-right" title="Sauvegarder"><i class="fa fa-bookmark-o"></i></a>
+                        <a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
+                        <a class="pull-right" title="Sauvegarder" ng-click="interest(e)"><i class="fa fa-bookmark-o"></i></a>
                     </div>
                 </div>
             </div>
