--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -16,7 +16,7 @@
             </div>
             <div style="float: left; width: 30%" ng-if="lieu">
                 <form ng-submit="searchEvent(key)">
-                    <input type="text" ng-model="key" required class="input" placeholder="Recherche d'événements"/>
+                    <input type="text" ng-model="key" required class="input" placeholder="{{'Recherche d\'événements ';''|translate}}"/>
                 </form>
             </div>
             <div class="navbar-collapse collapse">
@@ -28,7 +28,7 @@
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate>Se connecter</span></a>
                     </li>
                     <li class="dropdown" ng-if="loguer">
-                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp;
+                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp; {{user.name}}
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
