--- a/public/templates/mail/pdf-ticket.html
+++ b/public/templates/mail/pdf-ticket.html
@@ -6,48 +6,79 @@
 </head>
 <body>
 <style type="text/css">
-    table
+    table tr{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    table tr td{
+        position: relative;
+        /*border: 3px solid #eee;*/
+    }
+    span.fixe{
+        position: absolute;
+        top: 0;left: 0;
+        color: #8c8c8c;
+        text-transform: uppercase;
+        font-size: 12px;
+    }
+    span.detail{
+        position: absolute;
+        left: 20px;
+        top: 25px;
+    }
 </style>
-    <div style="background: #f7f7f7;width: 740px;height: 100%;text-align: center">
+    <div style="background: #f7f7f7;width: 740px;height: 100%;">
 
-        <img src="../../images/logo/256_2.png" alt="" style="width: 256px;height: 100px"/>
-
-        <table style="width: 700px !important; background: #fff;margin: 20px">
-            <body>
+        <table style="width: 700px !important; background: #fff;margin: 0 20px">
+            <tbody>
             <tr>
-                <td style="padding: 10px; font-size: 24px;color: #f69524">
-                    <h3>Titre evenement</h3>
+                <td style="width: 20%;text-align: center">
+                    <img src="../../images/logo/256_2.png" alt="" style="width: 256px;height: 100px"/>
+                </td>
+                <td style="padding: 10px; font-size: 24px;color: #f69524;text-align: center">
+                    <span class="fixe">Titre</span>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipisici</h3>
                 </td>
             </tr>
             <tr>
                 <td style="padding: 0 10px 5px; line-height: 30px">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque, autem cumque error, est facilis ipsa iusto minus nihil nulla officiis quasi sit tenetur ullam, veritatis. Exercitationem illum unde vel.
+                    <span class="fixe">Date et heure</span>
+                    <span class="detail">du Samedi 15 Mars 2011 au Vendredi 14 Mai 2011</span>
                 </td>
-            </tr>
-            <tr>
-                <td style="text-align: center">
-                    <img src="../../images/509783.jpg" alt="" style="width: 80%;height: 400px;padding: 25px"/>
-                </td>
-            </tr>
-            <tr>
-                <td style="padding: 0 10px 5px; line-height: 30px">Date et heure : </td>
-            </tr>
-            <tr>
-                <td style="padding: 0 10px 5px; line-height: 30px">Lieu : </td>
-            </tr>
-            <tr>
                 <td style="padding: 0 10px 5px; line-height: 30px">
-                    <a href="lien vers billet" style="    padding: 10px 15px;
-    background: #00d656;
-    color: #fff;
-    font-size: 18px;
-    border-color: #00d656;
-    box-shadow: none;
-    text-decoration: none;
-    border-radius: 3px;">Télécharger vos billets</a>
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td style="width: 200px">
+                                <span class="fixe">Adresse</span>
+                                <span class="detail">
+                                    Boite postale,Rue <br/>
+                                    Ville,Pays <br/>
+                                </span>
+                            </td>
+                            <td style="width: 50%;text-align: center">
+                                <img src="" alt="Qr code ici" style="width: 50%;height:100px"/>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </td>
             </tr>
-            </body>
+
+
+            </tbody>
+        </table>
+        <table style="width: 700px !important; background: #fff;margin: 0 20px">
+            <tbody>
+            <tr>
+                <td>
+                    <span class="fixe">Detail commande</span>
+                    <span class="detail">
+                        Commande n°:1455 commandé par Nsc-Edward le Mercredi 4 Janvier 2011
+                    </span>
+                </td>
+            </tr>
+            </tbody>
         </table>
     </div>
 </body>
