--- a/public/templates/event/form-events.html
+++ b/public/templates/event/form-events.html
@@ -21,6 +21,9 @@
                  translate>
                 Design
             </div>
+            <div class="choice" ng-if="if_id" ui-sref="panneau({id:id})" translate>
+                Gérer
+            </div>
         </div>
     </div>
 
@@ -40,11 +43,11 @@
                         <label for="nom">
                             <ff translate>Non de l'événement</ff>
                             <span class="requis">*</span></label>
-                        <input type="text" id="nom" ng-model="e.titre" placeholder="{{'Donnez un titre court et distinctif'|translate}}" class="form-control"/>
+                        <input type="text" id="nom" ng-model="e.name" placeholder="{{'Donnez un titre court et distinctif'|translate}}" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="adresse" translate>Adresse </label>
-                        <input type="text" id="adresse" ng-model="e.adresse.lieu" placeholder="{{'Précisez où il est organisé'|translate}}" class="form-control"/>
+                        <input type="text" id="adresse" ng-model="e.adress.name" placeholder="{{'Précisez où il est organisé'|translate}}" class="form-control"/>
                         <div>
                             <a ng-click="lieu='ligne'"><i class="fa fa-globe"></i>
                                 <ff translate>Evenement en ligne</ff>
@@ -58,26 +61,33 @@
                         <div class="row" style="margin-top: 10px" ng-if="lieu=='adresse'">
                             <div class="col-lg-8">
                                 <div class="form-group">
-                                    <input type="text" ng-model="e.adresse.adresse1" placeholder="{{'Adresse 1'|translate}}" class="form-control"/>
-                                    <input type="text" ng-model="e.adresse.adresse2" placeholder="{{'Adresse 2'|translate}}" class="form-control"/>
-                                    <input type="text" ng-model="e.adresse.ville" placeholder="{{'Ville'|translate}}" class="form-control"/>
-
-                                    <div class="row">
-                                        <div class="col-lg-6 col-sm-6">
-                                            <input type="text" ng-model="e.adresse.region" placeholder="{{'Région'|translate}}" class="form-control"/>
-                                        </div>
-                                        <div class="col-lg-6 col-sm-6">
-                                            <input type="text" ng-model="e.adresse.boite" placeholder="{{'Boîte postale'|translate}}" class="form-control"/>
-                                        </div>
-                                    </div>
-                                    <select ng-model="e.adresse.pays" class="form-control"
-                                            ng-options="p.id as p.name for p in pays"
+                                    <input type="text" ng-model="e.adress.name" placeholder="{{'Adresse'|translate}}" class="form-control"/>
+                                    <input type="text" ng-model="e.adress.street" placeholder="{{'Rue'|translate}}" class="form-control"/>
+                                    <!--<input type="text" ng-model="e.adresse.ville" placeholder="{{'Ville'|translate}}" class="form-control"/>-->
+                                    <select ng-model="e.adress.town" class="form-control"
+                                            ng-options="v.id as v.name for v in villes|orderBy:'-name':true"
+                                            >
+                                        <option value="" disabled>
+                                            <ff translate>Sélectionnez votre ville</ff>
+                                        </option>
+                                    </select>
+                                    <!--<div class="row">-->
+                                        <!--<div class="col-lg-6 col-sm-6">-->
+                                            <!--<input type="text" ng-model="e.adresse.region" placeholder="{{'Région'|translate}}" class="form-control"/>-->
+                                        <!--</div>-->
+                                        <!--<div class="col-lg-6 col-sm-6">-->
+                                            <!-- -->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <input type="number" ng-model="e.adress.post_box" placeholder="{{'Boîte postale'|translate}}" class="form-control"/>
+                                    <select ng-model="e.adress.country" class="form-control"
+                                            ng-options="p.id as p.name for p in pays|orderBy:'-name':true"
                                             >
                                         <option value="" disabled>
                                             <ff translate>Sélectionnez votre pays</ff>
                                         </option>
                                     </select>
-                                    <a href=""><i class="fa fa-reload"></i>
+                                    <a href="" ng-click="reset_adress()"><i class="fa fa-refresh"></i>
                                         <ff translate>Redéfinissez le lieu</ff>
                                     </a>
                                 </div>
@@ -95,10 +105,10 @@
                                 <label translate>Commence</label>
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="10/09/2015"/>
+                                        <input type="text" class="form-control" ng-model="e.start_date" placeholder="10/09/2015"/>
                                     </div>
                                     <div class="col-lg-6 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="10:30"/>
+                                        <input type="text" class="form-control" ng-model="e.start_hour" placeholder="10:30"/>
                                     </div>
                                 </div>
                             </div>
@@ -106,10 +116,10 @@
                                 <label translate>Se termine</label>
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="20/09/2015"/>
+                                        <input type="text" class="form-control" ng-model="e.end_date" placeholder="20/09/2015"/>
                                     </div>
                                     <div class="col-lg-6 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="20:50"/>
+                                        <input type="text" class="form-control" ng-model="e.end_hour" placeholder="20:50"/>
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +177,7 @@
                             </select>
                         </div>
                         <div ng-if="user=='new'||user=='edit'">
-                            <input type="text" ng-model="e.oragnisateur.name" placeholder="{{'Nom de l'organisateur'|translate}}" class="form-control"/>
+                            <input type="text" ng-model="e.oragnisateur.name" placeholder="{{'Nom de l\'organisateur'|translate}}" class="form-control"/>
                         </div>
                     </div>
 
@@ -177,11 +187,11 @@
                              ng-if="e.organisateur.name!=undefined || user!='new'&& user!='edit'"
                                 >
                             <div class="col-lg-12"
-                                 ng-bind-html="e.organisateur.description">
+                                 ng-bind-html="e.organizer.description">
                             </div>
                         </div>
                         <div ng-if="user=='new'||user=='edit'" >
-                            <text-angular ng-model="e.organisateur.description"></text-angular>
+                            <text-angular ng-model="e.organizer.description"></text-angular>
                         </div>
                     </div>
 
@@ -194,12 +204,28 @@
                         <div class="row-fluid" ng-if="inclure">
                             <div class="col-lg-12">
                                 <div class="form-group">
+                                    <label><i class="fa fa-facebook"></i> <ff translate>Site web</ff></label>
+                                    <input type="text" class="form-control" ng-model="e.organizer.facebook" placeholder="{{'Site web'|translate}}"/>
+                                </div>
+                                <div class="form-group">
                                     <label><i class="fa fa-facebook"></i> Facebook</label>
-                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook" placeholder="{{'Lien vers page Facebook'|translate}}"/>
+                                    <input type="text" class="form-control" ng-model="e.organizer.facebook" placeholder="{{'Lien vers page Facebook'|translate}}"/>
                                 </div>
                                 <div class="form-group">
                                     <label><i class="fa fa-twitter"></i> Twitter</label>
-                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook" placeholder="{{'Lien vers page Twitter'|translate}}"/>
+                                    <input type="text" class="form-control" ng-model="e.organizer.twitter" placeholder="{{'Lien vers page Twitter'|translate}}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label><i class="fa fa-instagram"></i> Instagram</label>
+                                    <input type="text" class="form-control" ng-model="e.organizer.instagram" placeholder="{{'Lien vers page Instagram'|translate}}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label><i class="fa fa-google-plus"></i> Google+</label>
+                                    <input type="text" class="form-control" ng-model="e.organizer.google" placeholder="{{'Lien vers page Google'|translate}}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label><i class="fa fa-linkedin"></i> LinkedIn</label>
+                                    <input type="text" class="form-control" ng-model="e.organizer.linkedin" placeholder="{{'Lien vers page LinkedIn'|translate}}"/>
                                 </div>
                             </div>
                         </div>
