--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -64,9 +64,9 @@
                     <li><a href="" translate>Cookies</a></li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-sm-3 col-md-3">
-                <select name="" id="" class="form-control">
-                    <option ng-repeat="p in pays" value="">{{p}}</option>
+            <div class="col-lg-3 col-sm-3 col-md-3" ng-controller="AppCtrl">
+                <select name="" id="" class="form-control" ng-model="lang">
+                    <option ng-repeat="p in langue" value="{{p.value}}">{{p.name}}</option>
                 </select>
             </div>
         </div>
