--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -14,7 +14,7 @@
                     <li class=""><a href="#" ui-sref="events" data-nav-section="home"><span translate>Parcourir</span></a></li>
                 </ul>
             </div>
-            <div style="float: left; width: 30%" ng-if="lieu">
+            <div style="float: left; width: 24%" ng-if="lieu">
                 <form ng-submit="searchEvent(key)">
                     <input type="text" ng-model="key" required class="input" placeholder="{{'Recherche d\'événements ';''|translate}}"/>
                 </form>
@@ -28,7 +28,7 @@
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate>Se connecter</span></a>
                     </li>
                     <li class="dropdown" ng-if="loguer">
-                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp; {{user.name}}
+                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp; {{user.person.first_name}}
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
