Modification des routes pour la partie administration creation des templates pour les mails

--- a/public/templates/mail/created-event.html
+++ b/public/templates/mail/created-event.html
@@ -5,6 +5,35 @@
     <title></title>
 </head>
 <body>
+<style type="text/css">
+    table
+</style>
+<div style="background: #f7f7f7;width: 740px;height: 100%;text-align: center">
 
+    <img src="../../images/logo/256_2.png" alt="" style="width: 256px;height: 100px"/>
+
+    <table style="width: 700px !important; background: #fff;margin: 20px">
+        <body>
+        <tr>
+            <td style="padding: 10px; font-size: 24px;color: #f69524">
+                <h3>Bravo votre événement : [titre de l'évent]</h3>
+            </td>
+        </tr>
+        <tr>
+            <td style="padding: 0 10px 5px; line-height: 30px">
+                <a href="lien vers evenement" style="    padding: 10px 15px;
+    background: #00d656;
+    color: #fff;
+    font-size: 18px;
+    border-color: #00d656;
+    box-shadow: none;
+    text-decoration: none;
+    border-radius: 3px;">Consulter le</a>
+            </td>
+        </tr>
+
+        </body>
+    </table>
+</div>
 </body>
 </html>
